Got routing going

--- a/www/styles/game.css
+++ b/www/styles/game.css
@@ -1,6 +1,7 @@
-/*
-	Game styles
-*/
+/**************************************************************
+	Langenium Game Styles
+	Author: Paul Brzeski
+**************************************************************/
 body {
 	margin: 0;
 	overflow: hidden;
