--- a/www/styles/ui.css
+++ b/www/styles/ui.css
@@ -1,6 +1,7 @@
-/*
-	UI styles
-*/
+/**************************************************************
+	Langenium UI Styles
+	Author: Paul Brzeski
+**************************************************************/
 .dialog {
 	color: #FFF;
 	background-color: #000;
