--- a/www/templates/menu.jade
+++ b/www/templates/menu.jade
@@ -1,10 +1,10 @@
 ul#menu.span-12.last
 	li.menu-item
-		a(href='/') Home
-	li.menu-item
 		a(href='/about/') About
 	li.menu-item
 		a(href='/gallery/') Gallery
+	li.menu-item
+		a(href='/guide/') Game Guide
 	li.menu-item
 		a(href='/community/') Community
 	li.search
