--- a/www/templates/menu.jade
+++ b/www/templates/menu.jade
@@ -1,12 +1,21 @@
-ul#menu.span-12.last
-	li.menu-item
-		a(href='/about/') About
-	li.menu-item
-		a(href='/gallery/') Gallery
-	li.menu-item
-		a(href='/guide/') Game Guide
-	li.menu-item
-		a(href='/community/') Community
-	li.search
-		input(type='text', value='Search')#search
-		a.button GO
+ul#menu.span-13.last
+	li
+		a(href='/about/').menu-item
+			.indicator
+			span About
+	li
+		a(href='/gallery/').menu-item
+			.indicator
+			span Gallery
+	li
+		a(href='/guide/').menu-item
+			.indicator
+			span Game Guide
+	li
+		a(href='/community/').menu-item
+			.indicator
+			span Community
+	li
+		.menu-item
+			input(type='text', value='Search')#search
+			a.button GO
