--- a/www/templates/pages/home.jade
+++ b/www/templates/pages/home.jade
@@ -7,7 +7,9 @@
 					li
 						.text.left
 							h3 Welcome to Langenium
-							p A game bla bla bla
+							p This site is currently under construction.
+							p Get updates from the 
+								a(href='http://www.facebook.com/Langenium') Langenium Facebook page.
 					li
 						.text.right
 							h3 Game trailer
