Tiny changes to buttons

--- a/www/templates/pages/home.jade
+++ b/www/templates/pages/home.jade
@@ -29,7 +29,7 @@
 				h3 PLAY LANGENIUM
 				p	You can play Langenium by connecting with either OpenID or Facebook. 
 				p	Once you select a method, choose your game mode to login.
-				a(href='/play').button PLAY
+				a(href='/play',target='_new').button Launch game
 .row
 	.round-box.last
 			#news.span-14.last
