Various style changes

--- a/www/templates/header.jade
+++ b/www/templates/header.jade
@@ -3,7 +3,7 @@ head
 	link(href='/styles/layout.css', rel='stylesheet', type='text/javascript')
 	link(href='/styles/menu.css', rel='stylesheet', type='text/javascript')
 	link(href='/styles/styles.css', rel='stylesheet', type='text/javascript')
-	link(href='/styles/blueprint/screen.css', rel='stylesheet', type='text/javascript')
+	link(href='/styles/screen.css', rel='stylesheet', type='text/javascript')
 	link(href='/styles/jquery-ui-1.10.2.custom.css', rel='stylesheet', type='text/javascript')
 	link(href='http://fonts.googleapis.com/css?family=Aldrich', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/home')
