--- a/www/templates/pages/home.jade
+++ b/www/templates/pages/home.jade
@@ -32,7 +32,8 @@
 				a(href='/play',target='_new').button Launch game
 .row
 	.round-box.last
-			#news.span-14.last
+		.span-14.last
+			#news
 				h2.hidden News
 				ul
 					li
@@ -51,18 +52,19 @@
 						a(href='#') Read more
 						
 	.round-box.last
-		#game_guide.span-6.last
-			h3 Game guide
-			ul
-				li
-					a(href='#') How to play
-				li
-					a(href='#') Story
-				li
-					a(href='#') Locations
-				li
-					a(href='#') Factions
-				li
-					a(href='#') Ships
-				li
-					a(href='#') Enemies
+		.span-6.last
+			#game_guide
+				h3 Game guide
+				ul
+					li
+						a(href='#') How to play
+					li
+						a(href='#') Story
+					li
+						a(href='#') Locations
+					li
+						a(href='#') Factions
+					li
+						a(href='#') Ships
+					li
+						a(href='#') Enemies
