--- a/www/templates/pages/home.jade
+++ b/www/templates/pages/home.jade
@@ -50,7 +50,20 @@
 							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
 							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 						a(href='#') Read more
-						
+					li
+						h3 New 3D models, 
+							span.small 14 April 2013
+						p
+							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
+							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+						a(href='#') Read more
+					li
+						h3 New Editor,
+							span.small 14 April 2013
+						p
+							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
+							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+						a(href='#') Read more					
 	.round-box.last
 		.span-6.last
 			#game_guide
