--- a/www/templates/header.jade
+++ b/www/templates/header.jade
@@ -1,18 +1,19 @@
 head
+	meta(charset='utf-8')
 	title Langenium 
-	link(href='/styles/layout.css', rel='stylesheet', type='text/javascript')
-	link(href='/styles/menu.css', rel='stylesheet', type='text/javascript')
-	link(href='/styles/styles.css', rel='stylesheet', type='text/javascript')
-	link(href='/styles/screen.css', rel='stylesheet', type='text/javascript')
-	link(href='/styles/jquery-ui-1.10.2.custom.css', rel='stylesheet', type='text/javascript')
+	link(href='http://localhost:8080/styles/layout.css', rel='stylesheet', type='text/javascript')
+	link(href='http://localhost:8080/styles/menu.css', rel='stylesheet', type='text/javascript')
+	link(href='http://localhost:8080/styles/styles.css', rel='stylesheet', type='text/javascript')
+	link(href='http://localhost:8080/styles/screen.css', rel='stylesheet', type='text/javascript')
+	link(href='http://localhost:8080/styles/jquery-ui-1.10.2.custom.css', rel='stylesheet', type='text/javascript')
 	link(href='http://fonts.googleapis.com/css?family=Aldrich', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/home')
-		link(href='/styles/pages/home.css', rel='stylesheet', type='text/javascript')
+		link(href='http://localhost:8080/styles/pages/home.css', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/about/')
-		link(href='/styles/pages/about.css', rel='stylesheet', type='text/javascript')
+		link(href='http://localhost:8080/styles/pages/about.css', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/gallery/')
-		link(href='/styles/pages/gallery.css', rel='stylesheet', type='text/javascript')
+		link(href='http://localhost:8080/styles/pages/gallery.css', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/guide/')
-		link(href='/styles/pages/guide.css', rel='stylesheet', type='text/javascript')
+		link(href='http://localhost:8080/styles/pages/guide.css', rel='stylesheet', type='text/javascript')
 	if (page == 'pages/community/')
-		link(href='/styles/pages/community.css', rel='stylesheet', type='text/javascript')
+		link(href='http://localhost:8080/styles/pages/community.css', rel='stylesheet', type='text/javascript')
