Fusker seems to work

--- a/views/header.jade
+++ b/views/header.jade
@@ -1,6 +1,7 @@
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 title Langenium 
+link(rel='shortcut icon', href='/favicon.ico')
 link(rel='stylesheet', href='/styles/screen.css')
 link(rel='stylesheet', href='/styles/styles.css')
 link(rel='stylesheet', href='/styles/menu.css')
