Slideshow pause is working correctly in Chrome

--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -8,7 +8,7 @@
 						.text
 							h3 Game trailer
 							p A game bla bla bla
-						iframe(width="420",height="315",src="http://www.youtube.com/embed/a4ebwHrVykI?enablejsapi=1&version=3&playerapiid=a4ebwHrVykI",frameborder="0",allowfullscreen)
+						a(href='http://www.youtube.com/watch?v=a4ebwHrVykI').video Watch the game trailer
 					li
 						.text
 							h3 Game trailer
@@ -23,7 +23,7 @@
 								a(href='http://www.facebook.com/Langenium') Langenium Facebook page.
 						img(src='/website/images/slide2-01.png')
 					li
-						iframe(width="420",height="315",src="http://www.youtube.com/embed/tPPEHiuq5n4?enablejsapi=1&version=3&playerapiid=tPPEHiuq5n4",frameborder="0",allowfullscreen)
+						a(href='http://www.youtube.com/watch?v=tPPEHiuq5n4').video Watch the game trailer
 						.text
 							h3 Storyline trailer
 							p A game bla bla bla
