Video player pauses in slideshow across browsers

--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -4,16 +4,6 @@
 			#slideshow.round-box
 				h2.hidden Slideshow
 				ul.slides
-					li						
-						.text
-							h3 Game trailer
-							p A game bla bla bla
-						a(href='http://www.youtube.com/watch?v=a4ebwHrVykI').video Watch the game trailer
-					li
-						.text
-							h3 Game trailer
-							p Check out the game trailer
-						img(src='/website/images/slide1-01.png')
 					li
 						.text
 							h3 Welcome to Langenium
@@ -22,8 +12,22 @@
 							p Get updates from the 
 								a(href='http://www.facebook.com/Langenium') Langenium Facebook page.
 						img(src='/website/images/slide2-01.png')
+					li						
+						.text
+							h3 Game trailer
+							p A game bla bla bla
+						a(href='http://www.youtube.com/watch?v=a4ebwHrVykI').video Watch the game trailer
 					li
-						a(href='http://www.youtube.com/watch?v=tPPEHiuq5n4').video Watch the game trailer
+						.text
+							h3 Factions
+							p There are three factions in the game
+							ul
+								li The Kingdom of Winthrom
+								li Al-Alazaar
+								li The Union
+						img(src='/website/images/slide1-01.png')
+					li
+						a(href='http://www.youtube.com/watch?v=tPPEHiuq5n4').video Watch the storyline trailer
 						.text
 							h3 Storyline trailer
 							p A game bla bla bla
