--- a/public/website/styles/pages/home.css
+++ b/public/website/styles/pages/home.css
@@ -36,23 +36,23 @@
 	width: 96.75%;
 	height: 310px;
 }
-#slideshow .slides li {
+#slideshow .slides > li {
 	margin:  .75em 0;
 	width: 100%;
 	height: 350px;
 	position: relative;
 }
-#slideshow .slides li > * {
+#slideshow .slides > li > * {
 	float: left;
 	margin:  1.5em 0;
 }
-#slideshow .slides li .text {
+#slideshow .slides > li .text {
 	margin:  1em .5em 1em 2.5em ;
 	width:  230px;
 	height: 200px;
 	line-height:  2em;
 }
-#slideshow .slides li iframe {
+#slideshow .slides > li iframe {
 	margin: .85em 1em;
 }
 
