--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -15,22 +15,28 @@
 					li						
 						.text
 							h3 Game trailer
-							p A game bla bla bla
+							p Take to the skies in your airship and hunt pirates
+							p Langenium will offer various mission-based and random combat experiences
 						a(href='http://www.youtube.com/watch?v=a4ebwHrVykI').video Watch the game trailer
 					li
 						.text
 							h3 Factions
 							p There are three factions in the game
 							ul
-								li The Kingdom of Winthrom
-								li Al-Alazaar
-								li The Union
+								li 
+										h4 The Kingdom of Winthrom
+								li 
+										h4 Al-Alazaar
+								li 
+										h4 The Union
 						img(src='/website/images/slide1-01.png')
-					li
-						a(href='http://www.youtube.com/watch?v=tPPEHiuq5n4').video Watch the storyline trailer
+					li				
 						.text
 							h3 Storyline trailer
-							p A game bla bla bla
+							p Langenium is set on the water planet Ibidan following the destruction of Earth 200 years ago.
+							p This storyline will play a large part in the single player campaigns.						
+						a(href='http://www.youtube.com/watch?v=tPPEHiuq5n4').video Watch the storyline trailer
+				#controls
 	.round-box.last
 		.span-6.last 
 			#play
