--- a/views/website/header.jade
+++ b/views/website/header.jade
@@ -12,6 +12,7 @@ script(src='/shared/scripts/jquery.cycle.all.js')
 if (page == 'pages/home')
 	link(rel='stylesheet', href='/website/styles/pages/home.css')
 	script(src='/website/scripts/slideshow.js')
+	script(src='/website/scripts/news.js')
 if (page == 'pages/about/')
 	link(rel='stylesheet', href='/website/styles/pages/about.css')
 if (page == 'pages/gallery/')
