--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -49,17 +49,24 @@
 						tr
 							td 
 								strong W
-							td Up
+							td Forward
 							td 
 								strong A
 							td Left
 						tr
 							td 
 								strong S
-							td Down
+							td Back
 							td 
 								strong D
 							td Right
+						tr
+							td 
+								strong Space
+							td Up
+							td 
+								strong Shift
+							td Down
 						tr
 							td(colspan='2') 
 								strong Mouse-Scroll
@@ -76,35 +83,7 @@
 		.span-14.last
 			#news
 				h2.hidden News
-				ul
-					li
-						h3 New 3D models, 
-							span.small 14 April 2013
-						p
-							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
-							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						a(href='#') Read more
-					li
-						h3 New Editor,
-							span.small 14 April 2013
-						p
-							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
-							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						a(href='#') Read more
-					li
-						h3 New 3D models, 
-							span.small 14 April 2013
-						p
-							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
-							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						a(href='#') Read more
-					li
-						h3 New Editor,
-							span.small 14 April 2013
-						p
-							| I've instroduced new 3D models into the game and I ca'nt be Duis aute irure dolor in reprehenderit 
-							| voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						a(href='#') Read more					
+				ul				
 	.round-box.last
 		.span-6.last
 			#game_guide
