--- a/views/website/pages/home.jade
+++ b/views/website/pages/home.jade
@@ -83,7 +83,12 @@
 		.span-14.last
 			#news
 				h2.hidden News
-				ul				
+				ul
+					li.loading
+						h3 
+							img(src='/shared/images/loading.gif')
+							span Loading news
+											
 	.round-box.last
 		.span-6.last
 			#game_guide
