Facebook support working. Updated sub pages with coming soon content

--- a/views/website/pages/community.jade
+++ b/views/website/pages/community.jade
@@ -2,3 +2,6 @@
 	.round-box.last
 		.span-21.last
 			h2  Community
+			p Visit the 
+				a(href='http://www.facebook.com/Langenium') Facebook page 
+				| for now
