--- a/views/website/pages/gallery.jade
+++ b/views/website/pages/gallery.jade
@@ -2,3 +2,7 @@
 	.round-box.last
 		.span-21.last
 			h2  Gallery
+			p Coming soon
+			p Check out the 
+				a(href='http://www.facebook.com/Langenium/photos_stream') Facebook gallery 
+				| for now
