--- a/views/website/pages/gallery_list.jade
+++ b/views/website/pages/gallery_list.jade
@@ -6,6 +6,7 @@
 				- each breadcrumb in breadcrumbs
 					li
 						a(href=breadcrumb.url)= breadcrumb.name
+						p.arrow
 			ul.gallery
 				- each gallery in gallery_list
 					li
