--- a/views/website/pages/gallery_view.jade
+++ b/views/website/pages/gallery_view.jade
@@ -6,6 +6,7 @@
 				- each breadcrumb in breadcrumbs
 					li
 						a(href=breadcrumb.url)= breadcrumb.name
+						p.arrow
 			p= gallery.name
 			.photo
 				a(href=gallery.url)
