--- a/views/website/header.jade
+++ b/views/website/header.jade
@@ -2,6 +2,7 @@ meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
 title Langenium 
 link(rel='shortcut icon', href='/favicon.ico')
+link(rel='stylesheet', href='/shared/styles/reset.css')
 link(rel='stylesheet', href='/website/styles/screen.css')
 link(rel='stylesheet', href='/website/styles/styles.css')
 link(rel='stylesheet', href='/website/styles/menu.css')
@@ -20,7 +21,28 @@ case page
 		link(rel='stylesheet', href='/website/styles/pages/gallery.css')
 	when 'pages/gallery_view'
 		link(rel='stylesheet', href='/website/styles/pages/gallery.css')
-	when 'pages/guide/'
+	when 'pages/guide'
 		link(rel='stylesheet', href='/website/styles/pages/guide.css')
+	when 'pages/guide_edit'
+		link(rel='stylesheet', href='/website/styles/pages/guide.css')
+		script(src='/shared/scripts/tinymce/tinymce.min.js')
+		script(src='/shared/scripts/tinymce/jquery.tinymce.min.js')
+		script
+			tinymce.init({
+				selector: "textarea",
+					theme: "modern",
+					plugins: [
+						"advlist autolink lists link image charmap print preview hr anchor pagebreak",
+						"searchreplace wordcount visualblocks visualchars code fullscreen",
+						"insertdatetime media nonbreaking save table contextmenu directionality",
+						"emoticons template paste"
+					],
+					toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+					toolbar2: "print preview media | forecolor backcolor emoticons",
+					templates: [
+						{title: 'Test template 1', content: 'Test 1'},
+						{title: 'Test template 2', content: 'Test 2'}
+					],
+			});
 	when 'pages/community/'
 		link(rel='stylesheet', href='/website/styles/pages/community.css')
