--- a/views/game/play.jade
+++ b/views/game/play.jade
@@ -2,6 +2,7 @@ doctype 5
 html(lang="en")
 	head
 		title Langenium Test
+		link(rel='stylesheet', href='/shared/styles/reset.css')
 		link(rel='stylesheet', href='/shared/styles/jquery-ui-1.10.2.custom.css')
 		link(rel='stylesheet', href='/game/styles/game.css')
 		link(rel='stylesheet', href='/game/styles/ui.css')
