--- a/views/website/index.jade
+++ b/views/website/index.jade
@@ -4,6 +4,17 @@ html
 		include header
 	body
 		.container
+			#top_nav.span-22.last
+				ul
+					li
+						a(href='#contact') Contact us
+					li.user
+						if (logged_id == true)
+							img(src=user.profile_img)
+							a(href='#profile')= user.username
+							a(href='/logout') Logout
+						else
+							a(href='/auth/facebook') Login with Facebook
 			.round-box
 				#header.span-22.last
 					h1.span-7
@@ -21,6 +32,8 @@ html
 					include pages/gallery_view
 				when 'pages/guide'
 					include pages/guide
+				when 'pages/guide_edit'
+					include pages/guide_edit
 				when 'pages/community'
 					include pages/community
 	script
