--- a/views/website/index.jade
+++ b/views/website/index.jade
@@ -34,6 +34,10 @@ html
 					include pages/guide
 				when 'pages/guide_edit'
 					include pages/guide_edit
+				when 'pages/guide_index'
+					include pages/guide_index
+				when 'pages/guide_new'
+					include pages/guide_new
 				when 'pages/community'
 					include pages/community
 	script
