--- a/views/website/header.jade
+++ b/views/website/header.jade
@@ -23,13 +23,36 @@ case page
 		link(rel='stylesheet', href='/website/styles/pages/gallery.css')
 	when 'pages/guide'
 		link(rel='stylesheet', href='/website/styles/pages/guide.css')
+	when 'pages/guide_index'
+		link(rel='stylesheet', href='/website/styles/pages/guide.css')
+	when 'pages/guide_new'
+		link(rel='stylesheet', href='/website/styles/pages/guide.css')
+		script(src='/shared/scripts/tinymce/tinymce.min.js')
+		script(src='/shared/scripts/tinymce/jquery.tinymce.min.js')
+		script
+			tinymce.init({
+				selector: "textarea[rows=20]",
+					theme: "modern",
+					plugins: [
+						"advlist autolink lists link image charmap print preview hr anchor pagebreak",
+						"searchreplace wordcount visualblocks visualchars code fullscreen",
+						"insertdatetime media nonbreaking save table contextmenu directionality",
+						"emoticons template paste"
+					],
+					toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+					toolbar2: "print preview media | forecolor backcolor emoticons",
+					templates: [
+						{title: 'Test template 1', content: 'Test 1'},
+						{title: 'Test template 2', content: 'Test 2'}
+					],
+			});
 	when 'pages/guide_edit'
 		link(rel='stylesheet', href='/website/styles/pages/guide.css')
 		script(src='/shared/scripts/tinymce/tinymce.min.js')
 		script(src='/shared/scripts/tinymce/jquery.tinymce.min.js')
 		script
 			tinymce.init({
-				selector: "textarea",
+				selector: "textarea[rows=20]",
 					theme: "modern",
 					plugins: [
 						"advlist autolink lists link image charmap print preview hr anchor pagebreak",
