Fixed guide creation

--- a/views/website/pages/guide_new.jade
+++ b/views/website/pages/guide_new.jade
@@ -15,7 +15,7 @@
 			if (logged_id == true)
 				.round_box
 					form(method='post',action='/guide/save')
-						textarea(rows='1',cols='133', name='title')
+						textarea(rows='1',cols='133', name='newtitle')
 						textarea(rows='20',cols='133',name='content')
 						input(type='submit', value='Save').button 
 			else 
