--- a/views/game/play.jade
+++ b/views/game/play.jade
@@ -28,6 +28,7 @@ html(lang="en")
 	script(src='/game/scripts/effects/bullets.js')
 	script(src='/game/scripts/effects/particles.js')
 	script(src='/game/scripts/effects/water.js')
+	script(src='/game/scripts/engine.js')
 	script(src='/game/scripts/events.js')
 	script(src='/game/scripts/objects.js')
 	script(src='/game/scripts/objects/bots.js')
@@ -36,32 +37,48 @@ html(lang="en")
 	script(src='/game/scripts/objects/projectiles.js')
 	script(src='/game/scripts/ui.js')
 	script(type='text/javascript')
-			/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
-				Globals
-			\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
+		/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+			Globals
+		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
-			// Global variables for the THREE JS client
-			var scene, water, sky, M = 500000;
-			var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
-			var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
+		// Global variables for the THREE JS client
+		var scene, water, sky, M = 500000;
+		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
+		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 
-			var effects = new effects();
-			effects.water = new water();
 
-			var objects = new objects();
-			objects.players = new players();
+		var client = new client();
+		var engine = new engine();
 
-			//	Setup the global socket variable
-			var events = new events();
+		var effects = new effects();
+		effects.water = new water();
 
-			var ui = new user_interface();
-			ui.makeDialog("playerPosition", ui.playerPosition);
+		var objects = new objects();
+		objects.players = new players();
 
-			ui.editor = new editor();
-			ui.editor.properties = new properties();
-			ui.editor.transform = new transform();
-			//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
-			//ui.makeDialog("log",log_ui);
+		//	Setup the global socket variable
+		var events = new events();
+
+		var ui = new user_interface();
+		ui.makeDialog("playerPosition", ui.playerPosition);
+
+		ui.editor = new editor();
+		ui.editor.properties = new properties();
+		ui.editor.transform = new transform();
+		//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
+		//ui.makeDialog("log",log_ui);
+
+		/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+			Start the game engine
+		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
+
+		$(document).ready(function(){
+
+			client.initialize();
+			engine.animate();
+			
+		});
+
 	script
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-37159175-1']);
