--- a/views/game/play.jade
+++ b/views/game/play.jade
@@ -15,15 +15,14 @@ html(lang="en")
 	script(src='/shared/scripts/socket.io.min.js')
 	script(src='/shared/scripts/three.min.js')
 	script(src='/shared/scripts/tween.min.js')
-	script(src='/shared/scripts/TrackballControls.js')
 	script(src='/shared/scripts/THREEx.KeyboardState.js')
 	script(src='/shared/scripts/Stats.js')
 	script(src='/shared/scripts/smoothie.js')
 	script(src='/shared/scripts/SimplexNoise.js')
 	script(src='/game/scripts/client.js')
-	script(src='/game/scripts/editor.js')
-	script(src='/game/scripts/editor/properties.js')
-	script(src='/game/scripts/editor/transform.js')
+	script(src='/game/scripts/controls.js')
+	script(src='/game/scripts/controls/character.js')
+	script(src='/game/scripts/controls/flight.js')
 	script(src='/game/scripts/effects.js')
 	script(src='/game/scripts/effects/bullets.js')
 	script(src='/game/scripts/effects/particles.js')
@@ -42,29 +41,24 @@ html(lang="en")
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
 		// Global variables for the THREE JS client
-		var scene, water, sky, M = 500000;
+		var scene, water_tiles, sky, M = 500000;
 		var keyboard = new THREEx.KeyboardState(), clock = new THREE.Clock();
 		var player, ships = [], bots = [], bullets = [], particle_systems = [], ui = [];
 
+		client = new client();
+		engine = new engine();
 
-		var client = new client();
-		var engine = new engine();
+		controls = new controls();
+		objects = new objects();
 
-		var effects = new effects();
-		effects.water = new water();
-
-		var objects = new objects();
-		objects.players = new players();
+		effects = new effects();
 
 		//	Setup the global socket variable
-		var events = new events();
+		events = new events();
 
-		var ui = new user_interface();
+		ui = new user_interface();
 		ui.makeDialog("playerPosition", ui.playerPosition);
 
-		ui.editor = new editor();
-		ui.editor.properties = new properties();
-		ui.editor.transform = new transform();
 		//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
 		//ui.makeDialog("log",log_ui);
 
@@ -78,6 +72,22 @@ html(lang="en")
 			engine.animate();
 			
 		});
+	if (editor == true)
+		script(src='/game/scripts/editor/properties.js')
+		script(src='/game/scripts/editor/transform.js')
+		script(src='/game/scripts/editor.js')
+		script(type='text/javascript')
+			var editor = new editor();
+			editor.properties = new properties();
+			editor.transform = new transform();
+
+			ui.makeDialog("editor_tools", editor.makeControls());
+			$("#editor_tools .button").button();
+			$("#editor_tools .menu").menu();
+			
+			ui.makeDialog("properties", editor.properties.makeControls());
+			ui.makeDialog("transform", editor.transform.makeControls());
+			editor.transform.render();
 
 	script
 		var _gaq = _gaq || [];
