--- a/views/game/play.jade
+++ b/views/game/play.jade
@@ -59,8 +59,7 @@ html(lang="en")
 		ui = new user_interface();
 		ui.makeDialog("playerPosition", ui.playerPosition);
 
-		//var log_ui = { width: 250, alignX: "left", alignY: "top", data: "" };
-		//ui.makeDialog("log",log_ui);
+		
 
 		/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 			Start the game engine
@@ -68,6 +67,8 @@ html(lang="en")
 
 		$(document).ready(function(){
 
+			client.updateWinSizeVariables();
+			console.log(client.winW);
 			client.initialize();
 			engine.animate();
 			
